add a ros package to publish joint data for arduino

--- a/3.Software/ROS_package/Urdf_ConfigFiles/CMakeLists.txt
+++ b/3.Software/ROS_package/Urdf_ConfigFiles/CMakeLists.txt
@@ -4,11 +4,10 @@ project(Urdf_ConfigFiles)
 
 find_package(catkin REQUIRED)
 
-catkin_package()
-
 find_package(roslaunch)
 
 find_package(catkin REQUIRED COMPONENTS
+  message_generation
   controller_manager
   gazebo_ros
   gazebo_ros_control
@@ -24,6 +23,14 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   trac_ik_lib
   serial
+  robot_msg
+)
+
+catkin_package(
+#  INCLUDE_DIRS include
+#  LIBRARIES demo02_talker_listener
+  CATKIN_DEPENDS roscpp rospy std_msgs message_runtime
+#  DEPENDS system_lib
 )
 
 include_directories(
@@ -34,6 +41,9 @@ include_directories(
 
 add_executable(Baize_HexapodRobot_Arduino src/Baize_HexapodRobot_Arduino.cpp)
 target_link_libraries(Baize_HexapodRobot_Arduino ${catkin_LIBRARIES} ${orocos_kdl_LIBRARIES})
+
+add_executable(BaizeHexapodRobot_Arduino_FluctuateStep src/BaizeHexapodRobot_Arduino_FluctuateStep.cpp)
+target_link_libraries(BaizeHexapodRobot_Arduino_FluctuateStep ${catkin_LIBRARIES} ${orocos_kdl_LIBRARIES})
 
 foreach(dir config launch meshes urdf)
 	install(DIRECTORY ${dir}/
